--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         }
       }
       player = new Player(middleX, middleY, 15, 'white')
+      function animate() {
+        animationId = requestAnimationFrame(animate)
+        ctx.fillStyle = 'rgba(0, 0, 0, 0.1)'
+        ctx.fillRect(0, 0, canvas.width, canvas.height)
+        player.draw()
+      }
     </script>
   </body>
 </html>
