--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         ctx.fillRect(0, 0, canvas.width, canvas.height)
         player.draw()
       }
+      animate()
     </script>
   </body>
 </html>
