--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       function ya() {
         window.loaction = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'
       }
-      canvas.addEventListener("click", ya);
+      canvas.addEventListener("click", function(){window.loaction = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'});
     </script>
   </body>
 </html>
