--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   </head>
   <body class="bg-black select-none">
-  <canvas class="select-none"></canvas>
+  <canvas></canvas>
     <script type="text/javascript">
     const canvas = document.querySelector('canvas');
     const ctx = canvas.getContext('2d')
