--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           ctx.fill()
         }
       }
-      player = new Player(middleX, middleY, 15, 'white')
+      player = new Player(middleX, middleY, 15, 'red')
       function animate() {
         animationId = requestAnimationFrame(animate)
         ctx.fillStyle = 'rgba(0, 0, 0, 0.1)'
