--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Run Jump Dodge Play!</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
   <body class="bg-black select-none">
   <canvas></canvas>
@@ -40,7 +41,9 @@
       }
       addEventListener("keypress", function(event){
         if (event.which == 32) {
-          player.y += 10
+          gsap.to(enemy, {
+            player.y += 10
+          })
         }
       });
     </script>
