--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
         addEventListener("keypress", function(event){
           if (event.which == 32) {
-            gsap.to(player, function(){
+            gsap.to(player, function(player){
               player.y += 10
             })
           }
