--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         }
         addEventListener("keypress", function(event){
           if (event.which == 32) {
-            gsap.to(player, function(player){
-              player.y += 10
+            gsap.to(player, {
+              y: player.y + 10
             })
           }
         });
