--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         addEventListener("keypress", function(event){
           if (event.which == 32) {
             gsap.to(player, {
-              y: player.y + 10
+              y: player.y - 50
             })
           }
         });
