--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       canvas.height = window.innerHeight
       const middleX = canvas.width / 2
       const middleY = canvas.height / 2
+      let gravity = true
         class Player {
           constructor(x, y, radius, color) {
             this.x = x
@@ -34,6 +35,11 @@
           ctx.fillStyle = 'rgba(0, 0, 0, 0.1)'
           ctx.fillRect(0, 0, canvas.width, canvas.height)
           player.draw()
+          if (player.y > 25 & gravity == true) {
+            gsap.to(player, {
+              y: player.y
+            }
+          }
         }
         animate()
         function ya() {
@@ -41,9 +47,11 @@
         }
         addEventListener("keypress", function(event){
           if (event.which == 32) {
+            gravity = false
             gsap.to(player, {
               y: player.y - 50
             })
+            gravity = true
           }
         });
     </script>
