--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           player.draw()
           if (player.y > 25 & gravity == true) {
             gsap.to(player, {
-              y: player.y
+              y: player.y + 10
             })
           }
         }
