--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           ctx.fillStyle = 'rgba(0, 0, 0, 0.1)'
           ctx.fillRect(0, 0, canvas.width, canvas.height)
           player.draw()
-          if (player.y > 25 & gravity == true) {
+          if (player.y < (window.innerHeight - 25) & gravity == true) {
             gsap.to(player, {
               y: player.y + 10
             })
