--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           ctx.fillRect(0, 0, canvas.width, canvas.height)
           player.draw()
           if (player.y < (window.innerHeight - 25) & gravity == true) {
-            player.y + 1
+            player.y += 1
           }
         }
         animate()
