--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       const middleX = canvas.width / 2
       const middleY = canvas.height / 2
       let gravity = true
+      let ground = false
         class Player {
           constructor(x, y, radius, color) {
             this.x = x
@@ -37,6 +38,9 @@
           player.draw()
           if (player.y < (window.innerHeight - 100) & gravity == true) {
             player.y += 1
+            ground = false
+          } else {
+            ground = true
           }
         }
         animate()
@@ -44,7 +48,7 @@
           window.loaction = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'
         }
         addEventListener("keypress", function(event){
-          if (event.which == 32) {
+          if (event.which == 32 & ground = true) {
             gravity = false
             gsap.to(player, {
               y: player.y - 50
