--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           window.loaction = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'
         }
         addEventListener("keypress", function(event){
-          if (event.which == 32 & ground = true) {
+          if (event.which == 32 & ground == true) {
             gravity = false
             gsap.to(player, {
               y: player.y - 50
