--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           ctx.fillStyle = 'rgba(0, 0, 0, 0.1)'
           ctx.fillRect(0, 0, canvas.width, canvas.height)
           player.draw()
-          if (player.y < (window.innerHeight - 100) & gravity == true) {
+          if (player.y < (canvas.height - 100) & gravity == true) {
             ground = false
             player.y += 1
           } else {
