--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             ctx.fill()
           }
         }
-        player = new Player(middleX, middleY, 15, 'red')
+        player = new Player(middleX / 2, middleY, 15, 'red')
         function animate() {
           animationId = requestAnimationFrame(animate)
           ctx.fillStyle = 'rgba(0, 0, 0, 0.1)'
