--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       const middleY = canvas.height / 2
       let gravity = true
       let ground = false
+      let animationId
+      let 
         class Player {
           constructor(x, y, radius, color) {
             this.x = x
@@ -31,6 +33,27 @@
           }
         }
         player = new Player(middleX / 2, middleY, 15, 'red')
+      let spawnEnemiesAnimation
+let level = 0
+
+function spawnEnemies() {
+    const radius = 10
+    let x
+    let y
+    const enemySpeedMultiplyer = score / 5000000 + 1
+      x = canvas.width
+      y = canvas.height - 100
+    const color = `hsl(${Math.random() * 360}, 50%, 50%`
+  
+  const velocity = {
+    x: 100,
+    y: 0
+    
+  }
+    enemies.push(new Enemy(x, y, radius, color, velocity))
+
+delay(0).then(() => spawnEnemiesAnimation = requestAnimationFrame(spawnEnemies))
+}
         function animate() {
           animationId = requestAnimationFrame(animate)
           ctx.fillStyle = 'rgba(0, 0, 0, 0.1)'
