--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
           })
         }
       }
-      player = new Player(middleX / 2, middleY, 15, 'red')
+      player = new Player(middleX / 2, middleY, 15, 'gray')
       function spawnEnemies() {
         const radius = 10
         let x
         let y
         x = canvas.width
         y = canvas.height - 100
-        const color = `hsl(${Math.random() * 360}, 50%, 50%`
+        const color = "hsl(0, 100%, 100%)"
         const velocity = {
           x: 10,
-          y: 0
+          y: canvas.heigh - Math.random() * (120 - 90) + 90
         }
-        enemies.push(new Enemy(x, y, radius, color, velocity))
+        delay(734).then(() => {enemies.push(new Enemy(x, y, radius, color, velocity)})
         spawnEnemiesAnimation = requestAnimationFrame(spawnEnemies)
       }
       function animate() {
