--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         let y
         x = canvas.width
         y = canvas.height - 100
-        const color = "hsl(0, 100%, 100%)"
+        const color = 'hsl(0, 100%, 100%)'
         const velocity = {
           x: 10,
-          y: canvas.heigh - Math.random() * (120 - 90) + 90
+          y: canvas.height - Math.random() * (120 - 90) + 90
         }
         delay(734).then(() => {enemies.push(new Enemy(x, y, radius, color, velocity)})
         spawnEnemiesAnimation = requestAnimationFrame(spawnEnemies)
